--- a/nuxeo-platform-preview/src/main/resources/web/nuxeo.war/incl/tabs/preview_tab.xhtml
+++ b/nuxeo-platform-preview/src/main/resources/web/nuxeo.war/incl/tabs/preview_tab.xhtml
@@ -10,5 +10,15 @@
     <iframe src="#{previewActions.previewURL}" frameborder="1" height="600px" width="100%" scrolling="auto" id="preview-frame" onload="loadGwtModule();">
     </iframe>
 
+    <script type="text/javascript">
+      jQuery(document).ready(function() {
+        var fancyBox = jQuery('#fancybox-content', window.parent.document);
+        if (fancyBox.length > 0 &amp;&amp; fancyBox.height() > 0) {
+          // we know we are in a fancybox
+          jQuery('#preview-frame').height(fancyBox.height() - 20);
+        }
+      });
+    </script>
+
   </h:form>
 </div>
