NXP-7559: add utility function to display a FancyBox popup; update the contextual menu

--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/popupMenu.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/popupMenu.xhtml
@@ -7,11 +7,13 @@
     <ul>
       <nxu:dataList var="action" layout="simple"
         value="#{popupHelper.unfiltredPopupActions}">
-        <li id="ctxMenu_#{action.id}" action="#{action.link}">
-          <nxu:graphicImage value="#{action.icon}"
-            rendered="#{not empty action.icon}" />
-          <h:outputText value=" #{messages[action.label]}" />
-        </li>
+        <nxu:set var="link" value="#{action.getLink()}" resolveTwice="true">
+          <li id="ctxMenu_#{action.id}" action="#{link}">
+            <nxu:graphicImage value="#{action.icon}"
+              rendered="#{not empty action.icon}" />
+            <h:outputText value=" #{messages[action.label]}" />
+          </li>
+        </nxu:set>
       </nxu:dataList>
     </ul>
   </div>
