NXCM-229 fix routing selenium tests

--- a/nuxeo-platform-document-routing-distribution/ftest/selenium/tests/documents/testDocumentRouteCreation.html
+++ b/nuxeo-platform-document-routing-distribution/ftest/selenium/tests/documents/testDocumentRouteCreation.html
@@ -791,6 +791,11 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
+	<td>Link=Unlock</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
 	<td>//input[@value='Validate model']</td>
 	<td></td>
 </tr>
