--- a/nuxeo-platform-document-routing-distribution/ftest/selenium/tests/documents/testRouteLock.html
+++ b/nuxeo-platform-document-routing-distribution/ftest/selenium/tests/documents/testRouteLock.html
@@ -58,6 +58,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>clickAndWait</td>
+	<td>Link=Lock</td>
+	<td></td>
+</tr>
+<tr>
 	<td>verifyTextPresent</td>
 	<td>Document locked</td>
 	<td></td>
