--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/tabs/document_edit.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/tabs/document_edit.xhtml
@@ -15,9 +15,13 @@
   <table class="dataInput">
     <tbody>
       <tr>
-        <td class="iconColumn" style="vertical-align:top;" />
+        <td class="iconColumn" style="vertical-align:top;">
+          <h:graphicImage value="/icons/lightbulb.png"
+            styleClass="layoutHelpLabel"
+            title="#{messages['label.editComment.tooltip']}" />
+        </td>
         <td class="labelColumn">
-          <h:outputText value="#{messages['label.comment']}" />
+          <h:outputText value="#{messages['label.editComment']}" />
         </td>
         <td class="fieldColumn">
           <h:inputTextarea value="#{currentDocument.contextData['request/comment']}" />
