--- a/nuxeo-platform-document-routing-web/src/main/resources/web/nuxeo.war/widgets/summary/summary_document_route_action.xhtml
+++ b/nuxeo-platform-document-routing-web/src/main/resources/web/nuxeo.war/widgets/summary/summary_document_route_action.xhtml
@@ -4,19 +4,25 @@
   xmlns:nxdir="http://nuxeo.org/nxdirectory"
   xmlns:nxl="http://nuxeo.org/nxforms/layout">
   
-  <h3 class="summaryTitle">
-    <h:outputText value="#{messages['label.document.routing.related.route']}" />
-  </h3>
-  
+  	 <h3 class="summaryTitle">
+       <h:outputText value="#{messages['label.document.routing.related.route']}" />
+     </h3>
   <c:choose>
     <c:when test="#{routingActions.hasRelatedRoute()}">
+      <h:outputText value="#{messages['label.route.info']} " />
+      <h:outputText value="#{routingActions.getRelatedRoute().getName()} " /> 
       <h:outputText value="#{messages['label.route.started']} " />
     </c:when>
     <c:otherwise>
+	 <c:if test="#{widget.mode == 'edit'}">
 	  <nxl:layout value="#{routingActions}" mode="edit" name="document_related_route" />
 	  <h:commandButton type="submit" class="button"
 	    value="#{messages['action.start.related.document.route']}"
 	    action="#{routingActions.startRouteRelatedToCurrentDocument()}" id="start_route"/>
+     </c:if>
+      <c:if test="#{widget.mode != 'edit'}">
+		<h:outputText value="#{messages['label.route.not.started']} " />
+     </c:if>
     </c:otherwise>
   </c:choose>
 </div>
