nxp-7569: in prefixed suggestion also

--- a/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/widgets/user_prefixed_suggestion_widget_template.xhtml
+++ b/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/widgets/user_prefixed_suggestion_widget_template.xhtml
@@ -39,7 +39,8 @@
     <c:set var="searchType" value="#{nxu:test(!empty widget.properties.userSuggestionSearchType, widget.properties.userSuggestionSearchType, '')}" />
     <c:set var="maxSearchResults" value="#{nxu:test(!empty widget.properties.userSuggestionMaxSearchResults, widget.properties.userSuggestionMaxSearchResults, 0)}" />
     <c:set var="suggestionWidth" value="${nxu:test(!empty widget.properties.width, widget.properties.width, '400')}" />
-
+    <c:set var="suggestionWithEmail" value="${nxu:test(!empty widget.properties.displayEmailInSuggestion, widget.properties.displayEmailInSuggestion, false)}" />
+    
     <h:outputText value="#{messages['label.security.searchUsers']}"
       rendered="#{searchType =='USER_TYPE'}"
       class="rightsAddLabel" />
@@ -88,8 +89,15 @@
             <h:column>
               <f:subview rendered="#{result.type == 'USER_TYPE'}" id="#{widget.id}_user_result">
                 <h:graphicImage value="/icons/user.gif" alt="user.gif" />
-                <h:outputText value="#{nxu:userDisplayName(result.id, result.entry[userSchema].firstName, result.entry[userSchema].lastName)}" />
-              </f:subview>
+                 <c:choose>
+                  <c:when test="#{suggestionWithEmail}">
+                    <h:outputText value="#{nxu:userDisplayNameAndEmail(result.id, result.entry[userSchema].firstName, result.entry[userSchema].lastName, result.entry[userSchema].email)}" />
+                  </c:when>
+                  <c:otherwise>
+                    <h:outputText value="#{nxu:userDisplayName(result.id, result.entry[userSchema].firstName, result.entry[userSchema].lastName)}" />
+                  </c:otherwise>
+                </c:choose>
+             </f:subview>
               <f:subview rendered="#{result.type == 'GROUP_TYPE'}" id="#{widget.id}_group_result">
                 <h:graphicImage value="/icons/group.gif" alt="group.gif" />
                 <h:outputText value="#{nxu:groupDisplayName(result.id, result.entry[groupSchema].grouplabel)}" />
@@ -123,7 +131,14 @@
                   <nxu:methodResult name="info" value="#{userSuggestionActions.getPrefixedUserInfo(model.rowData)}">
                     <f:subview rendered="#{info.type == 'USER_TYPE'}">
                       <h:graphicImage value="/icons/user.gif" alt="user.gif" />
-                      <h:outputText value="#{nxu:userDisplayName(info.id, info.entry[userSchema].firstName, info.entry[userSchema].lastName)}" />
+                        <c:choose>
+                          <c:when test="#{suggestionWithEmail}">
+                            <h:outputText value="#{nxu:userDisplayNameAndEmail(result.id, result.entry[userSchema].firstName, result.entry[userSchema].lastName, result.entry[userSchema].email)}" />
+                          </c:when>
+                          <c:otherwise>
+                            <h:outputText value="#{nxu:userDisplayName(result.id, result.entry[userSchema].firstName, result.entry[userSchema].lastName)}" />
+                          </c:otherwise>
+                        </c:choose>
                     </f:subview>
                     <f:subview rendered="#{info.type == 'GROUP_TYPE'}">
                       <h:graphicImage value="/icons/group.gif" alt="group.gif" />
