NXP-7621: fix javascript escaping of title in popup to create a relation to a document

--- a/nuxeo-platform-relations/nuxeo-platform-relations-web/src/main/resources/web/nuxeo.war/widgets/listing/relation_listing_title_link_widget_template.xhtml
+++ b/nuxeo-platform-relations/nuxeo-platform-relations-web/src/main/resources/web/nuxeo.war/widgets/listing/relation_listing_title_link_widget_template.xhtml
@@ -6,7 +6,7 @@
   xmlns:nxh="http://nuxeo.org/nxweb/html"
   xmlns:h="http://java.sun.com/jsf/html">
 
-  <a href="javascript:updateParent('#{field_1}', '#{field_2}');">
+  <a href="javascript:updateParent('#{field_1}', '#{nxu:javaScriptEscape(field_2)}');">
     #{nxd:titleOrId(field_0)}
   </a>
 
