--- a/nuxeo-platform-document-routing-distribution/ftest/selenium/tests/documents/testDocumentRouteCreation.html
+++ b/nuxeo-platform-document-routing-distribution/ftest/selenium/tests/documents/testDocumentRouteCreation.html
@@ -264,6 +264,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>clickAndWait</td>
+	<td>link=Manage</td>
+	<td></td>
+</tr>
+<tr>
 	<td>click</td>
 	<td>link=New</td>
 	<td></td>
@@ -985,7 +990,6 @@
 	<td>/nuxeo/logout</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
