--- a/nuxeo-platform-document-routing-web/src/main/resources/web/nuxeo.war/widgets/summary/summary_current_route_action.xhtml
+++ b/nuxeo-platform-document-routing-web/src/main/resources/web/nuxeo.war/widgets/summary/summary_current_route_action.xhtml
@@ -8,7 +8,7 @@
 
   <c:set var="lifeCycleState" value="#{currentDocument.getCurrentLifeCycleState()}" />
   <c:choose>
-    <c:when test="#{lifeCycleState eq 'draft' and routeSecurityChecker.canValidateRoute()}">
+    <c:when test="#{lifeCycleState eq 'draft' and routeSecurityChecker.canValidateRoute(currentDocument)}">
       <h:commandButton type="submit" class="button"
         value="#{messages['action.validate.document.routing.model']}"
         action="#{routingActions.validateRouteModel()}" id="validate_route_model"/>
