NXCM-458 replace content tab by route tab

--- a/nuxeo-platform-document-routing-distribution/ftest/selenium/tests/documents/testDocumentRouteCreation.html
+++ b/nuxeo-platform-document-routing-distribution/ftest/selenium/tests/documents/testDocumentRouteCreation.html
@@ -264,13 +264,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=Manage</td>
-	<td></td>
-</tr>
-<tr>
 	<td>click</td>
-	<td>link=New</td>
+	<td>link=Add first step</td>
 	<td></td>
 </tr>
 <tr>
@@ -289,13 +284,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=RouteDoc</td>
-	<td></td>
-</tr>
-<tr>
 	<td>click</td>
-	<td>link=New</td>
+	<td>dm_route_elements:nxl_document_routing_route_content:nxw_dr_listing_step_actions:nxw_dr_listing_step_actions_add:addStepInForActionList:0:step_0</td>
 	<td></td>
 </tr>
 <tr>
@@ -314,13 +304,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>Link=RouteDoc</td>
-	<td></td>
-</tr>
-<tr>
 	<td>click</td>
-	<td>link=New</td>
+	<td>dm_route_elements:nxl_document_routing_route_content_1:nxw_dr_listing_step_actions_1:nxw_dr_listing_step_actions_1_add:addStepInForActionList:0:step_0</td>
 	<td></td>
 </tr>
 <tr>
@@ -345,7 +330,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>link=New</td>
+	<td>dm_route_elements:nxl_document_routing_route_content_2:nxw_dr_listing_step_actions_2:nxw_dr_listing_step_actions_2_add:addStepInForkActionList:0:step_0</td>
 	<td></td>
 </tr>
 <tr>
@@ -365,7 +350,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>link=New</td>
+	<td>dm_route_elements:nxl_document_routing_route_content_2:nxw_dr_listing_step_actions_2:nxw_dr_listing_step_actions_2_add:addStepInForkActionList:0:step_0</td>
 	<td></td>
 </tr>
 <tr>
@@ -384,13 +369,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>Link=C1</td>
-	<td></td>
-</tr>
-<tr>
 	<td>click</td>
-	<td>link=New</td>
+	<td>dm_route_elements:nxl_document_routing_route_content_2:nxw_dr_listing_step_actions_2:nxw_dr_listing_step_actions_2_add:addStepInForActionList:0:step_0</td>
 	<td></td>
 </tr>
 <tr>
@@ -409,13 +389,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=C</td>
-	<td></td>
-</tr>
-<tr>
 	<td>click</td>
-	<td>link=New</td>
+	<td>dm_route_elements:nxl_document_routing_route_content_2:nxw_dr_listing_document_route_folder_element_type_1:nxw_dr_listing_document_route_folder_element_type_1:nxw_dr_listing_document_route_folder_element_type_1_add:addStepInForActionList:0:step_0</td>
 	<td></td>
 </tr>
 <tr>
@@ -435,7 +410,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>link=New</td>
+	<td>dm_route_elements:nxl_document_routing_route_content_4:nxw_dr_listing_step_actions_4:nxw_dr_listing_step_actions_4_add:addStepInForkActionList:0:step_0</td>
 	<td></td>
 </tr>
 <tr>
@@ -454,13 +429,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>Link=C2</td>
-	<td></td>
-</tr>
-<tr>
 	<td>click</td>
-	<td>link=New</td>
+	<td>dm_route_elements:nxl_document_routing_route_content_4:nxw_dr_listing_step_actions_4:nxw_dr_listing_step_actions_4_add:addStepInForActionList:0:step_0</td>
 	<td></td>
 </tr>
 <tr>
@@ -485,7 +455,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>link=New</td>
+	<td>dm_route_elements:nxl_document_routing_route_content_5:nxw_dr_listing_step_actions_5:nxw_dr_listing_step_actions_5_add:addStepInForkActionList:0:step_0</td>
 	<td></td>
 </tr>
 <tr>
@@ -504,13 +474,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>Link=C2.2</td>
-	<td></td>
-</tr>
-<tr>
 	<td>click</td>
-	<td>link=New</td>
+	<td>dm_route_elements:nxl_document_routing_route_content_5:nxw_dr_listing_step_actions_5:nxw_dr_listing_step_actions_5_add:addStepInForActionList:0:step_0</td>
 	<td></td>
 </tr>
 <tr>
@@ -529,23 +494,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=RouteDoc</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=C</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=C2</td>
-	<td></td>
-</tr>
-<tr>
 	<td>click</td>
-	<td>link=New</td>
+	<td>dm_route_elements:nxl_document_routing_route_content_5:nxw_dr_listing_document_route_folder_element_type_3:nxw_dr_listing_document_route_folder_element_type_3:nxw_dr_listing_document_route_folder_element_type_3_add:addStepInForActionList:0:step_0</td>
 	<td></td>
 </tr>
 <tr>
@@ -564,13 +514,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=RouteDoc</td>
-	<td></td>
-</tr>
-<tr>
 	<td>click</td>
-	<td>link=New</td>
+	<td>dm_route_elements:nxl_document_routing_route_content_2:nxw_dr_listing_document_route_folder_element_type:nxw_dr_listing_document_route_folder_element_type:nxw_dr_listing_document_route_folder_element_type_add:addStepInForActionList:0:step_0</td>
 	<td></td>
 </tr>
 <tr>
@@ -589,13 +534,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>Link=RouteDoc</td>
-	<td></td>
-</tr>
-<tr>
 	<td>click</td>
-	<td>link=New</td>
+	<td>dm_route_elements:nxl_document_routing_route_content_8:nxw_dr_listing_step_actions_8:nxw_dr_listing_step_actions_8_add:addStepInForActionList:0:step_0</td>
 	<td></td>
 </tr>
 <tr>
@@ -614,13 +554,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>Link=RouteDoc</td>
-	<td></td>
-</tr>
-<tr>
 	<td>click</td>
-	<td>link=New</td>
+	<td>dm_route_elements:nxl_document_routing_route_content_9:nxw_dr_listing_step_actions_9:nxw_dr_listing_step_actions_9_add:addStepInForActionList:0:step_0</td>
 	<td></td>
 </tr>
 <tr>
