--- a/nuxeo-platform-document-routing-distribution/ftest/selenium/tests/documents/testRouteModification.html
+++ b/nuxeo-platform-document-routing-distribution/ftest/selenium/tests/documents/testRouteModification.html
@@ -73,7 +73,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>link=New</td>
+	<td>link=Add first step</td>
 	<td></td>
 </tr>
 <tr>
@@ -89,16 +89,6 @@
 <tr>
 	<td>clickAndWait</td>
 	<td>//input[@value='Create']</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=routeToModify</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Route</td>
 	<td></td>
 </tr>
 <tr>
@@ -316,7 +306,6 @@
 	<td>/nuxeo/logout</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
