NXP-7577 Allow to pass complex properties (incl Blobs) via a JSON definition in all operations using the Properties format

--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/usersActivity/activityCharts.xhtml
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/usersActivity/activityCharts.xhtml
@@ -25,10 +25,12 @@ jQuery(document).ready(function() {
       gadgetDefs: [
                    {specUrl : '#{gadgetsBaseURL}/site/gadgets/eventMonitoring/eventMonitoring.xml',
                     title : '#{messages['adminsubtab.usersActivity.charts.eventMonitoring']}',
-                    width : '100%'},
+                    width : '100%',
+                    height: '380px'},
                    {specUrl : '#{gadgetsBaseURL}/site/gadgets/httpMonitoring/httpMonitoring.xml',
                     title : '#{messages['adminsubtab.usersActivity.charts.httpMonitoring']}',
-                    width : '100%'}]
+                    width : '100%',
+                    height: '380px'}]
     });
   })
 </script>
