NXCM-466: In Routing history tab, when clicking on a route name, display the Route in a lightbox popup style. (don't redirect to somewhere else)

--- a/nuxeo-platform-document-routing-web/src/main/resources/web/nuxeo.war/widgets/listing/listing_document_route_folder_element_type_widget_template.xhtml
+++ b/nuxeo-platform-document-routing-web/src/main/resources/web/nuxeo.war/widgets/listing/listing_document_route_folder_element_type_widget_template.xhtml
@@ -4,8 +4,10 @@
   xmlns:f="http://java.sun.com/jsf/core"
   xmlns:h="http://java.sun.com/jsf/html">
 
- <ui:include src="/widgets/listing/route_actions_widget_template.xhtml" />
-
+   <c:if test="#{widget.properties.showAvailableActionsOnRouteElement == 'true'}" >
+     <ui:include src="/widgets/listing/route_actions_widget_template.xhtml" />
+   </c:if>
+   
   <c:if test="#{field_0.stepf.execution eq 'parallel'}">
     <h:graphicImage value="icons/route_parallel.png"
       alt="#{field_0.dc.title}"
