--- a/nuxeo-platform-document-routing-distribution/ftest/selenium/tests/documents/testRouteLock.html
+++ b/nuxeo-platform-document-routing-distribution/ftest/selenium/tests/documents/testRouteLock.html
@@ -64,7 +64,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Document locked</td>
+	<td>This document is locked</td>
 	<td></td>
 </tr>
 <tr>
@@ -153,20 +153,11 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyElementPresent</td>
-	<td>Link=Delete</td>
+	<td>open</td>
+	<td>/nuxeo/logout</td>
 	<td></td>
 </tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>Link=Delete</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextNotPresent</td>
-	<td>Route already locked!</td>
-	<td></td>
-</tr>
+
 </tbody></table>
 </body>
 </html>
