--- a/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/widgets/user_suggestion_widget_template.xhtml
+++ b/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/widgets/user_suggestion_widget_template.xhtml
@@ -11,10 +11,13 @@
   <c:set var="groupSchema" value="#{userManager.groupSchemaName}" />
 
   <c:if test="#{widget.mode != 'edit'}">
-    <c:set var="firstLabelField" value="#{nxu:test(!empty widgetProperties_firstLabelField, widgetProperties_firstLabelField, 'firstName')}" />
-    <c:set var="entrySecondLabel" value="#{nxu:test(!empty widgetProperties_entrySecondLabel, widgetProperties_entrySecondLabel, 'lastName')}" />
-    <c:set var="hideFirstLabel" value="#{nxu:test(!empty widgetProperties_hideFirstLabel, widgetProperties_hideFirstLabel, false)}" />
-    <c:set var="hideSecondLabel" value="#{nxu:test(!empty widgetProperties_hideSecondLabel, widgetProperties_hideSecondLabel, false)}" />
+    <c:set var="firstLabelField" value="#{nxu:test(!empty widget.properties.firstLabelField, widget.properties.firstLabelField, 'firstName')}" />
+    <c:set var="secondLabelField" value="#{nxu:test(!empty  widget.properties.secondLabelField,  widget.properties.secondLabelField, 'lastName')}" />
+    <c:set var="thirdLabelField" value="#{nxu:test(!empty  widget.properties.thirdLabelField,  widget.properties.thirdLabelField, 'email')}" />
+    <c:set var="hideFirstLabel" value="#{nxu:test(!empty widget.properties.hideFirstLabel,  widget.properties.hideFirstLabel, false)}" />
+    <c:set var="hideSecondLabel" value="#{nxu:test(!empty  widget.properties.hideSecondLabel,  widget.properties.hideSecondLabel, false)}" />
+    <c:set var="hideThirdLabel" value="#{nxu:test(!empty  widget.properties.hideThirdLabel,  widget.properties.hideThirdLabel, false)}" />
+    <c:set var="suggestionWithEmail" value="${nxu:test(!empty widget.properties.displayEmailInSuggestion, widget.properties.displayEmailInSuggestion, false)}" />
 
     <c:set var="hideVirtualGroups" value="#{nxu:test(!empty widget.properties.hideVirtualGroups, widget.properties.hideVirtualGroups, false)}" />
 
@@ -25,20 +28,24 @@
         <nxu:methodResult name="info" value="#{userSuggestionActions.getUserInfo(item)}">
           <f:subview rendered="#{info.type == 'USER_TYPE'}">
             <h:graphicImage value="/icons/user.gif" alt="user.gif" />
-            <c:choose>
-              <c:when test="#{hideFirstLabel and hideSecondLabel}">
-                <c:set var="userDisplayName" value="#{nxu:userDisplayName(info.id, null, null)}" />
-              </c:when>
-              <c:when test="#{!hideFirstLabel and hideSecondLabel}">
-                <c:set var="userDisplayName" value="#{nxu:userDisplayName(info.id, info.entry[userSchema][firstLabelField], null)}" />
-              </c:when>
-              <c:when test="#{hideFirstLabel and !hideSecondLabel}">
-                <c:set var="userDisplayName" value="#{nxu:userDisplayName(info.id, info.entry[userSchema][entrySecondLabel], null)}" />
-              </c:when>
-              <c:when test="#{!hideFirstLabel and !hideSecondLabel}">
-                <c:set var="userDisplayName" value="#{nxu:userDisplayName(info.id, info.entry[userSchema][firstLabelField], info.entry[userSchema][entrySecondLabel])}" />
-              </c:when>
-            </c:choose>
+                <c:set var="firstNameField" value="${nxu:test(hideFirstLabel,null , firstLabelField)}" />
+                <c:set var="lastNameField" value="#{nxu:test(hideSecondLabel, null, secondLabelField)}" />
+                <c:set var="emailField" value="#{nxu:test(hideThirdLabel, null, thirdLabelField)}" />
+                <c:choose>
+                  <c:when test="#{suggestionWithEmail}">
+                  <c:choose>
+                    <c:when test="#{not (hideThirdLabel) and (hideFirstLabel) and (hideFirstLabel)}">
+                      <c:set var="userDisplayName" value="#{nxu:userDisplayNameAndEmail(info.id, info.entry[userSchema][emailField], null, null)}" />
+                    </c:when>
+                    <c:otherwise>
+                      <c:set var="userDisplayName" value="#{nxu:userDisplayNameAndEmail(info.id, info.entry[userSchema][firstNameField], info.entry[userSchema][lastNameField],info.entry[userSchema][emailField])}" />
+                    </c:otherwise>
+                    </c:choose>
+                  </c:when>
+                  <c:otherwise>
+                    <c:set var="userDisplayName" value="#{nxu:userDisplayName(info.id, info.entry[userSchema][firstNameField], info.entry[userSchema][lastNameField])}" />
+                  </c:otherwise>
+                </c:choose>
             <h:outputLink value="#{nxu:userUrl('user', info.id, null, false)}" title="#{info.id}">
               <h:outputText value="#{userDisplayName}" />
             </h:outputLink>
