--- a/nuxeo-user-profile/src/main/resources/web/nuxeo.war/widgets/avatar_widget_template.xhtml
+++ b/nuxeo-user-profile/src/main/resources/web/nuxeo.war/widgets/avatar_widget_template.xhtml
@@ -17,20 +17,25 @@
   </c:if>
 
   <c:if test="#{widget.mode != 'edit'}">
+    <c:set var="userSchema" value="#{userManager.userSchemaName}"/>
+    <c:set var="userprofileSchema" value="userprofile"/>
 
-    <c:if test="#{empty field_1}">
+    <c:set var="userprofile" value="#{field_0.hasSchema(userprofileSchema) ? field_0 : userProfileActions.getUserProfileDocument(field_0[userSchema].username)}" />
+    <c:set var="avatar" value="#{empty field_1 ? userprofile[userprofileSchema].avatar : field_1}" />
+
+    <c:if test="#{empty avatar}">
       <div class="profileAvatar">
         <h:graphicImage value="/icons/missing_avatar.png"
         title="Missing profile avatar" alt="Missing profile avatar" class="avatar" />
       </div>
     </c:if>
 
-    <c:if test="#{not empty field_1}">
+    <c:if test="#{not empty avatar}">
       <div class="profileAvatar">
         <nxu:set var="image_url"
-          value="#{nxd:fileUrl('downloadFile', field_0, widget.properties.file_property_name, field_1.filename)}">
-          <img src="#{image_url}" title="#{field_1.filename}"
-            alt="#{field_1.filename}" width="#{widget.properties['width']}" class="avatar" />
+          value="#{nxd:fileUrl('downloadFile', userprofile, widget.properties.file_property_name, avatar.filename)}">
+          <img src="#{image_url}" title="#{avatar.filename}"
+            alt="#{avatar.filename}" width="#{widget.properties['width']}" class="avatar" />
         </nxu:set>
       </div>
     </c:if>
