NXP-6179: fix label

--- a/nuxeo-distribution-dm/ftest/selenium/tests/modifyFile.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/modifyFile.html
@@ -192,7 +192,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>//input[@value=&quot;Add new files&quot;]</td>
+	<td>//input[@value=&quot;Store uploaded files&quot;]</td>
 	<td></td>
 </tr>
 <tr>
