NXP-7466: Add Selenium tests

--- a/nuxeo-distribution-dm/ftest/selenium/tests/suite2.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/suite2.html
@@ -190,6 +190,9 @@
     <tr>
       <td><a href="./userCenter/userProfile.html">userProfile</a></td>
     </tr>
+    <tr>
+      <td><a href="./adminCenter/vocabularies.html">vocabularies</a></td>
+    </tr>
   </tbody>
 </table>
 </body>
