NXP-7466; fix selenium test for vocabularies

--- a/nuxeo-distribution-dm/ftest/selenium/tests/adminCenter/vocabularies.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/adminCenter/vocabularies.html
@@ -29,12 +29,12 @@
 <tr>
 	<td>type</td>
 	<td>username</td>
-	<td>jdoe</td>
+	<td>Administrator</td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>password</td>
-	<td>jdoe1</td>
+	<td>Administrator</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -43,7 +43,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>jdoe</td>
+	<td>Administrator</td>
 	<td></td>
 </tr>
 <tr>
